ecmascript/parser/tests/typescript-errors/decorators/type-arguments-invalid/input.ts.stderr
error: Expected (, got class
 --> $DIR/tests/typescript-errors/decorators/type-arguments-invalid/input.ts:2:1
  |
2 | class Test {}
  | ^^^^^

